# Hospital-Attendance-Rust-Back-End-API

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 20260714055615_create_patients_table.sql  20260714114733_patients_table.sql  20260718075818_visit_table.sql  20260720204755_create_users_table.sql
src/: db.rs  lib.rs  main.rs  state.rs
src/handlers/: auth_handler.rs  login.rs  mod.rs  patient_handlers.rs  visit_handlers.rs
src/middleware/: jwt.rs
src/models/: auth.rs  mod.rs  patient.rs  users.rs  visit.rs
src/repositories/: auth_repository.rs  mod.rs  postgres_auth_repository.rs  postgres_patient_repository.rs  postgres_visit_repository.rs  visit_repository.rs
src/repository/: mod.rs  patient_repository.rs  postgres_patient_repository.rs  postgres_visit_repository.rs  visit_repository.rs
src/services/: auth_service.rs  diagnosis_services.rs  mod.rs  patient_service.rs  visit_service.rs
src/state/: app_state.rs  mod.rs
