[package]
name = "task_flow_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
sqlx = {version ="0.9.0-alpha.1",features = [ 
   "postgres",
    "runtime-tokio",
    "macros",
    "chrono"
]}
dotenvy = "0.15"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.19.2"
jsonwebtoken = {version="10.2.0",features = ["rust_crypto"]}
